// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button should return a Button 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 8px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  background: #3B74F3;
  color: white;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Small"
>
  <span />
</button>
`;

exports[`button should return a Button with children 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 8px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  background: #3B74F3;
  color: white;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Small"
>
  <span>
    Button
  </span>
</button>
`;

exports[`button should return a Button with disabled 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 8px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  background: #3B74F3;
  color: white;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={true}
  shape="SemiRound"
  size="Small"
>
  <span>
    Button
  </span>
</button>
`;

exports[`button should return a Dashed Button 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 8px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  border: 1px dashed #3B74F3;
  color: #3B74F3;
  background: transparent;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Small"
>
  <span>
    Button
  </span>
</button>
`;

exports[`button should return a Large Button 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 8px;
  font-size: 1.25rem;
  line-height: 1.75rem;
  background: #3B74F3;
  color: white;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Large"
>
  <span>
    Button
  </span>
</button>
`;

exports[`button should return a Medium Button 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 8px;
  font-size: 1rem;
  line-height: 1.5rem;
  background: #3B74F3;
  color: white;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Medium"
>
  <span>
    Button
  </span>
</button>
`;

exports[`button should return a Outline Button 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 8px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  border: 1px solid #3B74F3;
  color: #3B74F3;
  background: transparent;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Small"
>
  <span>
    Button
  </span>
</button>
`;

exports[`button should return a Rectangle Button 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 0px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  background: #3B74F3;
  color: white;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={false}
  shape="Rectangle"
  size="Small"
>
  <span>
    Button
  </span>
</button>
`;

exports[`button should return a Round Button 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 12px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  background: #3B74F3;
  color: white;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={false}
  shape="Round"
  size="Small"
>
  <span>
    Button
  </span>
</button>
`;

exports[`button should return a SemiRound Button 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 8px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  background: #3B74F3;
  color: white;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Small"
>
  <span>
    Button
  </span>
</button>
`;

exports[`button should return a Small Button 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 8px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  background: #3B74F3;
  color: white;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Small"
>
  <span>
    Button
  </span>
</button>
`;

exports[`button should return a Text Button 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 8px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #3B74F3;
  background: transparent;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

.c0:hover {
  background: rgba(0,0,0,5%);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Small"
>
  <span>
    Button
  </span>
</button>
`;

exports[`button should return a danger Button 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 8px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  background: #3B74F3;
  color: white;
  background: #ff0e0e;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Small"
>
  <span>
    Button
  </span>
</button>
`;

exports[`button should return a success Button 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  border: none;
  padding: 0.5rem;
  -webkit-transition: all .1s cubic-bezier(0.4,0,0.2,1);
  transition: all .1s cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-radius: 8px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  background: #3B74F3;
  color: white;
  background: #198754;
}

.c0:active {
  -webkit-transform: scale(.95);
  -ms-transform: scale(.95);
  transform: scale(.95);
}

.c0:hover {
  -webkit-filter: brightness(115%);
  filter: brightness(115%);
}

.c0:disabled {
  -webkit-filter: opacity(60%);
  filter: opacity(60%);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Small"
>
  <span>
    Button
  </span>
</button>
`;
